--- a/motion.html
+++ b/motion.html
@@ -54,10 +54,10 @@
 					  Your browser does not support the video tag.
 					</video>
 
-					<video class="videoWidth" controls>
+					<!-- <video class="videoWidth" controls>
 					  <source src="http://www.gerardiki.com/video/motion_tango.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
-					</video>
+					</video> -->
 					<br>
 
 					<img src="images/mo_allthings.jpg" alt="All Things menu screen" title="All Things image">
