more video parameters
video not playing on Safari mobile

--- a/motion.html
+++ b/motion.html
@@ -39,17 +39,17 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls poster="images/mo_allthings.jpg" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_allthings.jpg" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_AllThings_loop.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 
-					<video class="videoWidth" controls preload="none">
+					<video class="videoWidth" controls="true" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_breaks.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 
-					<video class="videoWidth" controls preload="none">
+					<video class="videoWidth" controls="true" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_drumnbass.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -89,7 +89,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls preload="none">
+					<video class="videoWidth" controls="true" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_sfmuniint.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -115,7 +115,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls preload="none">
+					<video class="videoWidth" controls="true" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_psa.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
