ux and video formats

--- a/ux.html
+++ b/ux.html
@@ -35,13 +35,7 @@
 					<!-- <h3>Concept, Design</h3> -->
 					
 					<h3>View my process end-to-end.</h3>
-				</header>
-
-
-				<section class="imagesWrapper">
-
-				</section>
-				
+				</header>		
 			</section>
 
 			<section class="workCard">
@@ -290,7 +284,7 @@
 					<h3>Prototype Screens</h3>
 					<br>
 
-					<a class="button" href="https://invis.io/6N7JY5D9U" target="_blank">Click to view on InVision</a>
+					<a class="button" href="https://invis.io/6N7JY5D9U" target="_blank">View on InVision</a>
 				</header>
 
 				<section class="imagesWrapper">
