--- a/motion.html
+++ b/motion.html
@@ -39,7 +39,8 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_allthings.jpg" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_allthings_poster" width="640" preload="none">
+					<!-- <video class="videoWidth" controls="true" preload="none"> -->
 					  <source src="http://www.gerardiki.com/video/motion_AllThings_loop.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -53,14 +54,15 @@
 					  <source src="http://www.gerardiki.com/video/motion_drumnbass.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
-
-					<!-- <video class="videoWidth" controls>
-					  <source src="http://www.gerardiki.com/video/motion_tango.mp4" type="video/mp4">
-					  Your browser does not support the video tag.
-					</video> -->
 					<br>
 
-					<img src="images/mo_allthings.jpg" alt="All Things menu screen" title="All Things image">
+					<video class="videoWidth" controls="true" preload="none">
+					  <source src="video/motion_tango.mp4" type="video/mp4">
+					  Your browser does not support the video tag.
+					</video>
+					<br>
+
+					<!-- <img src="images/mo_allthings.jpg" alt="All Things menu screen" title="All Things image"> -->
 
 					
 					<img src="images/vid_breaks1.jpg" alt="All Things Breaks screen 1" title="All Things Breaks screen 1">
