--- a/motion.html
+++ b/motion.html
@@ -39,25 +39,25 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_allthings_poster" width="640" preload="none">
-					<!-- <video class="videoWidth" controls="true" preload="none"> -->
+					<video class="videoWidth" controls="true" poster="images/mo_allthings_poster.png" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_AllThings_loop.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
+					<!-- <br> -->
 
-					<video class="videoWidth" controls="true" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_breaks_poster.png" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_breaks.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 
-					<video class="videoWidth" controls="true" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_drumnbass_poster.png" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_drumnbass.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
-					<br>
+					<!-- <br> -->
 
-					<video class="videoWidth" controls="true" preload="none">
-					  <source src="video/motion_tango.mp4" type="video/mp4">
+					<video class="videoWidth" controls="true" poster="images/mo_tango_poster.png" preload="none">
+					  <source src="http://www.gerardiki.com/video/motion_tango.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 					<br>
@@ -70,7 +70,7 @@
 					<img src="images/vid_breaks5.jpg" alt="All Things Breaks screen 3" title="All Things Breaks screen 3">
 
 					<img src="images/vid_drumbass1.jpg" alt="All Things Drum &amp; Bass screen 1" title="All Things Drum &amp; Bass screen 1">
-					<img src="images/vid_drumbass3.jpg" alt="All Things Drum &amp; Bass screen 2" title="All Things Drum &amp; Bass screen 2">
+					<!-- <img src="images/vid_drumbass3.jpg" alt="All Things Drum &amp; Bass screen 2" title="All Things Drum &amp; Bass screen 2"> -->
 					<img src="images/vid_drumbass4.jpg" alt="All Things Drum &amp; Bass screen 3" title="All Things Drum &amp; Bass screen 3">
 
 					<img src="images/vid_tango1.jpg" alt="All Things Tango screen 1" title="All Things Tango screen 1">
@@ -91,7 +91,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_sfmuniint_poster.png" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_sfmuniint.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -100,7 +100,7 @@
 					<img src="images/vid_sfmuni1.jpg" alt="SF MUNI screen 1" title="SF MUNI image 1">
 					<img src="images/vid_sfmuni2.jpg" alt="SF MUNI screen 2" title="SF MUNI image 2">
 					<img src="images/vid_sfmuni3.jpg" alt="SF MUNI screen 3" title="SF MUNI image 3">
-					<img src="images/vid_sfmuni4.jpg" alt="SF MUNI screen 4" title="SF MUNI image 4">
+					<!-- <img src="images/vid_sfmuni4.jpg" alt="SF MUNI screen 4" title="SF MUNI image 4"> -->
 					<img src="images/vid_sfmuni42.jpg" alt="SF MUNI screen 5" title="SF MUNI image 5">
 					<img src="images/vid_sfmuni52.jpg" alt="SF MUNI screen 6" title="SF MUNI image 6">
 				</section>
@@ -117,13 +117,13 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_psa_poster.png" preload="none">
 					  <source src="http://www.gerardiki.com/video/motion_psa.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 					<br>
 
-					<img src="images/mo_wipp1.PNG" alt="WIPP screen 1" title="WIPP image 1">
+					<!-- <img src="images/mo_wipp1.PNG" alt="WIPP screen 1" title="WIPP image 1"> -->
 					<img src="images/mo_wipp2.PNG" alt="WIPP screen 2" title="WIPP image 2">
 					<img src="images/mo_wipp3.PNG" alt="WIPP screen 3" title="WIPP image 3">
 					<img src="images/mo_wipp4.PNG" alt="WIPP screen 4" title="WIPP image 4">
