video width height test

--- a/motion.html
+++ b/motion.html
@@ -39,7 +39,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_allthings_poster.png" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_allthings_poster.png" preload="none" width="640" height="480">
 					  <source src="http://www.gerardiki.com/video/motion_AllThings_loop.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
