video widths and heights

--- a/motion.html
+++ b/motion.html
@@ -45,18 +45,18 @@
 					</video>
 					<!-- <br> -->
 
-					<video class="videoWidth" controls="true" poster="images/mo_breaks_poster.png" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_breaks_poster.png" preload="none" width="640" height="480">
 					  <source src="http://www.gerardiki.com/video/motion_breaks.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 
-					<video class="videoWidth" controls="true" poster="images/mo_drumnbass_poster.png" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_drumnbass_poster.png" preload="none" width="640" height="480">
 					  <source src="http://www.gerardiki.com/video/motion_drumnbass.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 					<!-- <br> -->
 
-					<video class="videoWidth" controls="true" poster="images/mo_tango_poster.png" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_tango_poster.png" preload="none" width="640" height="480">
 					  <source src="http://www.gerardiki.com/video/motion_tango.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -91,7 +91,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_sfmuniint_poster.png" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_sfmuniint_poster.png" preload="none" width="400" height="300">
 					  <source src="http://www.gerardiki.com/video/motion_sfmuniint.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -117,7 +117,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_psa_poster.png" preload="none">
+					<video class="videoWidth" controls="true" poster="images/mo_psa_poster.png" preload="none" width="640" height="480">
 					  <source src="http://www.gerardiki.com/video/motion_psa.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
