--- a/motion.html
+++ b/motion.html
@@ -39,24 +39,24 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_allthings_poster.png" preload="none" width="640" height="480">
+					<video class="videoWidth" controls="true" poster="images/mo_allthings_poster.png" preload="none" width="640">
 					  <source src="http://www.gerardiki.com/video/motion_AllThings_loop.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 					<!-- <br> -->
 
-					<video class="videoWidth" controls="true" poster="images/mo_breaks_poster.png" preload="none" width="640" height="480">
+					<video class="videoWidth" controls="true" poster="images/mo_breaks_poster.png" preload="none" width="640">
 					  <source src="http://www.gerardiki.com/video/motion_breaks.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 
-					<video class="videoWidth" controls="true" poster="images/mo_drumnbass_poster.png" preload="none" width="640" height="480">
+					<video class="videoWidth" controls="true" poster="images/mo_drumnbass_poster.png" preload="none" width="640">
 					  <source src="http://www.gerardiki.com/video/motion_drumnbass.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
 					<!-- <br> -->
 
-					<video class="videoWidth" controls="true" poster="images/mo_tango_poster.png" preload="none" width="640" height="480">
+					<video class="videoWidth" controls="true" poster="images/mo_tango_poster.png" preload="none" width="640">
 					  <source src="http://www.gerardiki.com/video/motion_tango.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -66,7 +66,7 @@
 
 					
 					<img src="images/vid_breaks1.jpg" alt="All Things Breaks screen 1" title="All Things Breaks screen 1">
-					<img src="images/vid_breaks4.jpg" alt="All Things Breaks screen 2" title="All Things Breaks screen 2">
+					<!-- <img src="images/vid_breaks4.jpg" alt="All Things Breaks screen 2" title="All Things Breaks screen 2"> -->
 					<img src="images/vid_breaks5.jpg" alt="All Things Breaks screen 3" title="All Things Breaks screen 3">
 
 					<img src="images/vid_drumbass1.jpg" alt="All Things Drum &amp; Bass screen 1" title="All Things Drum &amp; Bass screen 1">
@@ -75,7 +75,7 @@
 
 					<img src="images/vid_tango1.jpg" alt="All Things Tango screen 1" title="All Things Tango screen 1">
 					<img src="images/vid_tango3.jpg" alt="All Things Tango screen 2" title="All Things Tango screen 2">
-					<img src="images/vid_tango5.jpg" alt="All Things Tango screen 3" title="All Things Tango screen 3">
+					<!-- <img src="images/vid_tango5.jpg" alt="All Things Tango screen 3" title="All Things Tango screen 3"> -->
 
 				</section>
 
@@ -91,7 +91,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_sfmuniint_poster.png" preload="none" width="400" height="300">
+					<video class="videoWidth" controls="true" poster="images/mo_sfmuniint_poster.png" preload="none" width="400">
 					  <source src="http://www.gerardiki.com/video/motion_sfmuniint.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
@@ -117,7 +117,7 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
-					<video class="videoWidth" controls="true" poster="images/mo_psa_poster.png" preload="none" width="640" height="480">
+					<video class="videoWidth" controls="true" poster="images/mo_psa_poster.png" preload="none" width="640">
 					  <source src="http://www.gerardiki.com/video/motion_psa.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
