--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
+	<link rel="icon" href="http://gerardiki.com/favicon.ico" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -92,11 +94,12 @@
 			<h1>Contact</h1>
 			<nav>
 				<script language="JavaScript">
-					var username = "gerardiki";
-					var hostname = "gmail.com";
+					var username = "gerard";
+					var hostname = "gerardiki.com";
 					var linktext = username + "@" + hostname ;
 					document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
 				</script>
+				<br>
 				<a href="http://www.linkedin.com/in/greyes" target="_blank">LinkedIn</a>
 				<a href="http://twitter.com/gerardiki" target="_blank">Twitter</a>
 				<a href="http://instagram.com/gerardiki" target="_blank">Instagram</a>
