--- a/interactive.html
+++ b/interactive.html
@@ -123,8 +123,8 @@
 			<h1>Contact</h1>
 			<nav>
 				<script language="JavaScript">
-					var username = "gerardiki";
-					var hostname = "gmail.com";
+					var username = "gerard";
+					var hostname = "gerardiki.com";
 					var linktext = username + "@" + hostname ;
 					document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
 				</script>
