--- a/ux.html
+++ b/ux.html
@@ -109,7 +109,7 @@
 						<br>
 
 						<h3>Typical Scenario:</h3>
-						<p class="quote">"In general, I like my job, but there's nothing more that I love than hanging out with all my friends, whether it's at a restaurant or working out!"</p>
+						<p class="quote myRed">"In general, I like my job, but there's nothing more that I love than hanging out with all my friends, whether it's at a restaurant or working out!"</p>
 
 						<p>On a Friday, after work, Tanya is still not sure whether she's going to a social event, or taking a yoga class with a friend. She checks her iPhone's Health app and sees that her activity has declined this week, due to working late. Before getting into her car, she wonders if the new boutique gym that opened on her route will have a drop-in policy for non-members.<p>
 					</section>
@@ -138,7 +138,7 @@
 
 				<section class="uxWrapper">
 					<section class="uxContentWrapper">
-						<h2>1.Motivational Elements</h2>
+						<h2>1. Motivational Elements</h2>
 						<ul>
 							<li>&bullet; Motivation is the biggest factor to get enthusiasts to exercise</li>
 							<li>&bullet; They also claim that once motivated, they will exercise</li>
@@ -246,7 +246,7 @@
 
 				<section class="uxWrapper">
 					<h2>Stats</h2>
-					<p>Consolidated user metrics would foster a feeling of competition</p>
+					<h4>Consolidated user metrics would foster a feeling of competition</h4>
 				</section>
 
 				<section class="imagesWrapper">
@@ -255,7 +255,7 @@
 
 				<section class="uxWrapper">
 					<h2>Confirmation / Invite</h2>
-					<p>For the social user, inviting others should be easily accessible</p>
+					<h4>For the social user, inviting others should be easily accessible</h4>
 				</section>
 
 				<section class="imagesWrapper">
