moar UX type edits

--- a/ux.html
+++ b/ux.html
@@ -326,19 +326,29 @@
 
 				<section class="uxWrapper">
 					<h2>Home</h2>
-					<p>1. Motivational carousel rotates between quotes, imagery, and user stat highlights.</p>
+					<p>1. Motivational carousel rotates between quotes, imagery, and user stat highlights.
+					<br>
+					2. Search for anything.
+					<br>
+					3. Dates in green suggesting potential activity days based on history.
+					<br>
+					4. Mini-scoreboard/stats showing user-selected data.</p>
+					<!-- <p>1. Motivational carousel rotates between quotes, imagery, and user stat highlights.</p>
 					<p>2. Search for anything.</p>
 					<p>3. Dates in green suggesting potential activity days based on history.</p>
-					<p>4. Mini-scoreboard/stats showing user-selected data.</p>
+					<p>4. Mini-scoreboard/stats showing user-selected data.</p> -->
 					<img src="images/ux_hifi1.png" alt="Hi-Fi Screen 1" title="Workout Hi-Fi Screen">
 				</section>
 
 				<section class="uxWrapper">
 					<h2>Search</h2>
-					<p>1. Exercises or Activity results shown first for actionability.</p>
-					<p>2. Class results show related gym or venue info.</p>
-					<p>3. Map results should also show nearby options.</p>
-					<p>4. Users in search can be invited to an activity.</p>
+					<p>1. Exercises or Activity results shown first for actionability.
+					<br>
+					2. Class results show related gym or venue info.
+					<br>
+					3. Map results should also show nearby options.
+					<br>
+					4. Users in search can be invited to an activity.</p>
 					<img src="images/ux_hifi2.png" alt="Hi-Fi Screen 2" title="Workout Hi-Fi Screen">
 				</section>
 
@@ -352,26 +362,26 @@
 
 				<section class="uxWrapper">
 					<h2>Monetization</h2>
-					<p>&bullet; Partner with developers to connect their apps/sites</p>
-					<p>&bullet; Partner with instructors and gyms to provide services</p>
-					<p>&bullet; Partner with visual artists and writers for content</p>
+					<p>&bullet; Partner with developers to connect their apps/sites<br>
+					&bullet; Partner with instructors and gyms to provide services<br>
+					&bullet; Partner with visual artists and writers for content</p>
 				</section>
 
 				<section class="uxWrapper">
 					<h2>Data Access and Storage</h2>
-					<p>&bullet; Internet access and location services required</p>
-					<p>&bullet; Encrypted storage will hold user info, such as payments, logins, and memberships</p>
-					<p>&bullet; User activity data will need to synch across apps/devices</p>
+					<p>&bullet; Internet access and location services required<br>
+					&bullet; Encrypted storage will hold user info, such as payments, logins, and memberships<br>
+					&bullet; User activity data will need to synch across apps/devices</p>
 				</section>
 
 				<section class="uxWrapper">
 					<h2>Hardware / Interactions</h2>
-					<p>&bullet; Platform: Apple iOS app</p>
-					<p>&bullet; Adaptive website - similar to app</p>
-					<p>&bullet; Accelerometer used to track running/walking/stairs</p>
-					<p>&bullet; Camera and geo-tagging for photos/videos</p>
-					<p>&bullet; NFC for on-site payments</p>
-					<p>&bullet; Fingerprint access for quicker payments</p>
+					<p>&bullet; Platform: Apple iOS app<br>
+					&bullet; Adaptive website - similar to app<br>
+					&bullet; Accelerometer used to track running/walking/stairs<br>
+					&bullet; Camera and geo-tagging for photos/videos<br>
+					&bullet; NFC for on-site payments<br>
+					&bullet; Fingerprint access for quicker payments</p>
 				</section>
 
 			</section>
