--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
 
 	<main>
 		<section id="profilePicWrapper">
-			<img id="profileImg" src="images/profile_hat.png">
+			<!-- <img id="profileImg" src=""> -->
 		</section>
 
 		<section id="manifesto">
