--- a/gymboree.html
+++ b/gymboree.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gerard Reyes</title>
+	<title>Gerard Reyes - Web</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
-	<link rel="icon" href="http://gerardiki.com/favicon.ico" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -18,82 +16,52 @@
 		</div>
 	</header>
 
-	<section id="hero" class="displayFlex">
-		<div>
-			<img id="logo" src="images/g_logo.svg" alt="profile picture" title="Gerardiki profile picture">
-			<h1>Digital Artisan</h1>
-			<!-- <a class="button" href="#about">Profile</a> -->
-		</div>
-	</section>
-
 	<nav id="mainNav">
-			<a class="" href="#work">Work</a>
+			<a class="" href="index.html#work">Work</a>
 			<a class="" href="profile.html">Profile</a>
 			<!-- <a class="" href="#">Log</a> -->
 			<a class="" href="#contact">Contact</a>
 	</nav>
-		
 
 	<main>
-		<section id="work" class="clearfix">
-			<!-- <h1>Work</h1> -->
-
-			<section id="workAudio" class="">
-				<a href="audio.html">
-					<header>
-							<h1>Audio</h1>
-					</header>
-				</a>
-			</section>
-
-			<section id="workInteractive" class="">
-				<a href="interactive.html">
-					<header>
-							<h1>Interactive</h1>
-					</header>
-				</a>
-			</section>
-
-			<section id="workMotion" class="">
-				<a href="motion.html">
-					<header>
-						<h1>Motion</h1>
-					</header>
-				</a>
-			</section>
+		<section id="workPage" class="clearfix">
+			<div class="bg_Web bg_centercover">
+				<h1 class="bgColor_Motion bg_padding">Gymboree</h1>
+			</div>
 			
-			<section id="workPrint" class="">
-				<a href="print.html">
-					<header>
-						<h1>Print</h1>
-					</header>
-				</a>
+			<section class="workCard">
+				<header>
+					<h2>Janie &amp; Jack</h2>
+					<h3>Design, Development</h3> 
+				</header>
+
+				<p class="workDetail"></p>
+
+				<section class="imagesWrapper">
+					<img src="images/jj1.png" alt="Janie & Jack Email 1" title="Janie & Jack Email">
+					<img src="images/jj2.png" alt="Janie & Jack Email 2" title="Janie & Jack Email">
+					<img src="images/jj3.png" alt="Janie & Jack Email 3" title="Janie & Jack Email">
+				</section>
+
 			</section>
 
-			<section id="workProduction" class="">
-				<a href="production.html">
-					<header>
-						<h1>Production</h1>
-					</header>
-				</a>
+			<section class="workCard">
+				<header>
+					<h2>Crazy8</h2>
+					<h3>Animation, Design, Development</h3>
+				</header>
+
+				<p class="workDetail"></p>
+
+				<section class="imagesWrapper">
+					<img src="images/c8main1.gif" alt="Crazy 8 Sale Lights Animation" title="Crazy 8 Animation"><br>
+					<img src="images/c81.png" alt="Crazy 8 Email 1" title="Crazy 8 Email">
+					<img src="images/c82.png" alt="Crazy 8 Email 1" title="Crazy 8 Email">
+					<img src="images/c83.png" alt="Crazy 8 Email 1" title="Crazy 8 Email">
+				</section>
+
 			</section>
 
-			<section id="workUX" class="">
-				<a href="ux.html">
-					<header>
-						<h1>User Experience</h1>
-					</header>
-				</a>
-			</section>
-			
-			<section id="workWeb" class="">
-				<a href="web.html">
-					<header>
-						<h1>Web</h1>
-					</header>
-				</a>
-			</section>
-			
 		</section>
 	</main>
 
