--- a/gymboree.html
+++ b/gymboree.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gerard Reyes - Web</title>
+	<title>Gerard Reyes - Gymboree</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -31,9 +31,9 @@
 				<p class="workDetail"></p>
 
 				<section class="imagesWrapper">
+					<img src="images/jj3.png" alt="Janie & Jack Email 3" title="Janie & Jack Email">
 					<img src="images/jj1.png" alt="Janie & Jack Email 1" title="Janie & Jack Email">
 					<img src="images/jj2.png" alt="Janie & Jack Email 2" title="Janie & Jack Email">
-					<img src="images/jj3.png" alt="Janie & Jack Email 3" title="Janie & Jack Email">
 				</section>
 
 			</section>
