--- a/web.html
+++ b/web.html
@@ -108,7 +108,7 @@
 				<a href="http://soundcloud.com/gerardiki" target="_blank">Soundcloud</a>
 				<a href="http://allihoopa.com/gerardiki" target="_blank">Allihoopa</a>
 			</nav>
-			<br><p>&copy;2016 Gerard Reyes</p>
+			<br><p>&copy;2016-2017 Gerard Reyes</p>
 		</section>
 	</footer>
 </body>
