production link removal

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 				</a>
 			</section>
 
-			<section id="workProduction" class="">
+			<!-- <section id="workProduction" class="">
 				<a href="production.html">
 					<header>
 						<h1>Production</h1>
 					</header>
 				</a>
-			</section>
+			</section> -->
 
 			<section id="workUX" class="">
 				<a href="ux.html">
